--- a/data/blog/vps/Lainsh-JPBGP.mdx
+++ b/data/blog/vps/Lainsh-JPBGP.mdx
@@ -7,7 +7,7 @@ draft: true
 ---
 
 # 🌐网络质量
-
+![三网回程](https://report.check.place/net/38GHYECVN.svg)
 
 # 🎬IP质量
 ![Lainsh-JPBGP](https://report.check.place/ip/3OB3NC68E.svg)
