--- a/data/blog/vps/Lainsh-JPBGP.mdx
+++ b/data/blog/vps/Lainsh-JPBGP.mdx
@@ -3,8 +3,249 @@ title: 'Lainsh-Japan-BGP'
 date: 2025-05-30 16:00:00
 tags: [vps]
 summary: 'Lainsh-JapanBGP 网络质量测试'
-draft: true
 ---
+
+                   测评频道: https://t.me/vps_reviews                    
+VPS融合怪版本：2025.04.12
+Shell项目地址：https://github.com/spiritLHLS/ecs
+Go项目地址 [推荐]：https://github.com/oneclickvirt/ecs
+---------------------基础信息查询--感谢所有开源项目---------------------
+ CPU 型号          : AMD EPYC-Milan Processor
+ CPU 核心数        : 1
+ CPU 频率          : 1996.250 MHz
+ CPU 缓存          : L1: 32.00 KB / L2: 512.00 KB / L3: 32.00 MB
+ AES-NI指令集      : ✔ Enabled
+ VM-x/AMD-V支持    : ❌ Disabled
+ 内存              : 166.96 MiB / 435.16 MiB
+ Swap              : [ no swap partition or swap file detected ]
+ 硬盘空间          : 2.00 GiB / 4.76 GiB
+ 启动盘路径        : /dev/vda3
+ 系统在线时间      : 13 days, 20 hour 9 min
+ 负载              : 2.21, 0.84, 0.30
+ 系统              : Debian GNU/Linux 12 (bookworm) (x86_64)
+ 架构              : x86_64 (64 Bit)
+ 内核              : 6.1.0-34-cloud-amd64
+ TCP加速方式       : cubic
+ 虚拟化架构        : KVM
+ NAT类型           : Full Cone
+ IPV4 ASN          : AS215304 YUWAN NETWORKS LIMITED
+ IPV4 位置         : Tokyo / Tokyo / JP
+ IPV6 ASN          : AS215304 YUWAN NETWORKS LIMITED
+ IPV6 位置         : Toyosu / Tokyo / Japan
+----------------------CPU测试--通过sysbench测试-------------------------
+ -> CPU 测试中 (Fast Mode, 1-Pass @ 5sec)
+ 1 线程测试(单核)得分: 		3207 Scores
+---------------------内存测试--感谢lemonbench开源-----------------------
+ -> 内存测试 Test (Fast Mode, 1-Pass @ 5sec)
+ 单线程读测试:		39772.99 MB/s
+ 单线程写测试:		21426.91 MB/s
+------------------磁盘dd读写测试--感谢lemonbench开源--------------------
+ -> 磁盘IO测试中 (4K Block/1M Block, Direct Mode)
+ 测试操作		写速度					读速度
+ 100MB-4K Block		45.7 MB/s (11.15 IOPS, 2.30s)		51.0 MB/s (12450 IOPS, 2.06s)
+ 1GB-1M Block		50.1 MB/s (48 IOPS, 20.94s)		50.3 MB/s (47 IOPS, 20.85s)
+---------------------磁盘fio读写测试--感谢yabs开源----------------------
+Block Size | 4k            (IOPS) | 64k           (IOPS)
+  ------   | ---            ----  | ----           ---- 
+Read       | 48.75 MB/s   (12.1k) | 48.55 MB/s     (758)
+Write      | 48.82 MB/s   (12.2k) | 48.86 MB/s     (763)
+Total      | 97.57 MB/s   (24.3k) | 97.41 MB/s    (1.5k)
+           |                      |                     
+Block Size | 512k          (IOPS) | 1m            (IOPS)
+  ------   | ---            ----  | ----           ---- 
+Read       | 46.46 MB/s      (90) | 45.67 MB/s      (44)
+Write      | 48.99 MB/s      (95) | 48.23 MB/s      (47)
+Total      | 95.46 MB/s     (185) | 93.90 MB/s      (91)
+------------流媒体解锁--基于oneclickvirt/CommonMediaTests开源-----------
+以下测试的解锁地区是准确的，但是不是完整解锁的判断可能有误，这方面仅作参考使用
+----------------Netflix-----------------
+[IPV4]
+您的网络可能没有正常配置IPv4，或者没有IPv4网络接入
+[IPV6]
+您的网络可能没有正常配置IPv6，或者没有IPv6网络接入
+----------------Youtube-----------------
+[IPV4]
+连接方式: Youtube Video Server
+视频缓存节点地域: 日本 东京(NRT20S05)
+Youtube识别地域: 日本(JP)
+[IPV6]
+连接方式: Youtube Video Server
+视频缓存节点地域: 日本 东京(NRT12S41)
+Youtube识别地域: 日本(JP)
+---------------DisneyPlus---------------
+无法获取DisneyPlus权验接口信息，当前测试可能会不准确
+[IPV4]
+当前IPv4出口所在地区即将开通DisneyPlus
+[IPV6]
+当前IPv4出口所在地区即将开通DisneyPlus
+解锁Netflix，Youtube，DisneyPlus上面和下面进行比较，不同之处自行判断
+----------------流媒体解锁--感谢RegionRestrictionCheck开源--------------
+ 以下为IPV4网络测试，若无IPV4网络则无输出
+============[ Multination ]============
+ Dazn:					Yes (Region: JP)
+ Disney+:				Yes (Region: JP)
+ Netflix:				Failed (Network Connection)
+ YouTube Premium:			Yes (Region: JP)
+ Amazon Prime Video:			Yes (Region: JP)
+ TVBAnywhere+:				Yes
+ Spotify Registration:			Yes (Region: JP)
+ OneTrust Region:			JP [Tokyo]
+ iQyi Oversea Region:			JP
+ Bing Region:				JP
+ Apple Region:				JP
+ YouTube CDN:				Tokyo
+ Netflix Preferred CDN:			Failed (Network Connection)
+ ChatGPT:				Yes
+ Google Gemini:				Yes (Region: JPN)
+ Claude:				No
+ Wikipedia Editability:			Yes
+ Google Play Store:			Japan 
+ Google Search CAPTCHA Free:		Yes
+ Steam Currency:			JPY
+ ---Forum---
+ Reddit:				Yes
+ ---Game---
+ SD Gundam G Generation Eternal:	Yes
+=======================================
+ 以下为IPV6网络测试，若无IPV6网络则无输出
+---------------TikTok解锁--感谢lmc999的源脚本及fscarmen PR--------------
+ Tiktok Region:		【JP】
+-------------IP质量检测--基于oneclickvirt/securityCheck使用-------------
+数据仅作参考，不代表100%准确，如果和实际情况不一致请手动查询多个数据库比对
+以下为各数据库编号，输出结果后将自带数据库来源对应的编号
+ipinfo数据库  [0] | scamalytics数据库 [1] | virustotal数据库   [2] | abuseipdb数据库   [3] | ip2location数据库    [4]
+ip-api数据库  [5] | ipwhois数据库     [6] | ipregistry数据库   [7] | ipdata数据库      [8] | db-ip数据库          [9]
+ipapiis数据库 [A] | ipapicom数据库    [B] | bigdatacloud数据库 [C] | cheervision数据库 [D] | ipqualityscore数据库 [E]
+IPV4:
+安全得分:
+声誉(越高越好): 0 [2] 
+信任得分(越高越好): 98 [8] 
+VPN得分(越低越好): 1 [8]
+代理得分(越低越好): 5 [8] 
+社区投票-无害: 0 [2] 
+社区投票-恶意: 0 [2] 
+威胁得分(越低越好): 0 [8] 
+欺诈得分(越低越好): 0 [1 E] 
+滥用得分(越低越好): 0 [3] 
+ASN滥用得分(越低越好): 0.0022 (Low) [A] 
+公司滥用得分(越低越好): 0 (Very Low) [A] 
+威胁级别: low [9] 
+黑名单记录统计:(有多少黑名单网站有记录):
+无害记录数: 0 [2]  恶意记录数: 0 [2]  可疑记录数: 0 [2]  无记录数: 94 [2]  
+安全信息:
+使用类型: business [A] isp [0 7] corporate [9] unknown [C] FixedLineISP [3]
+公司类型: isp [0 A] business [7]
+是否云提供商: No [7 D] 
+是否数据中心: No [0 5 6 8 A C] Yes [1]
+是否移动设备: No [5 A C] Yes [E]
+是否代理: No [0 1 4 5 6 7 8 9 A C D E] 
+是否VPN: No [0 1 6 7 A C D E] 
+是否Tor: No [0 1 3 6 7 8 A C D E] 
+是否Tor出口: No [1 7 D] 
+是否网络爬虫: No [9 A E] 
+是否匿名: No [1 6 7 8 D] 
+是否攻击者: No [7 8 D] 
+是否滥用者: No [7 8 A C D E] 
+是否威胁: No [7 8 C D] 
+是否中继: No [0 7 8 C D] 
+是否Bogon: No [7 8 A C D] 
+是否机器人: No [E] 
+DNS-黑名单: 315(Total_Check) 0(Clean) 0(Blacklisted) 0(Other) 
+IPV6:
+安全得分:
+欺诈得分(越低越好): 0 [1] 
+滥用得分(越低越好): 0 [3]
+ASN滥用得分(越低越好): 0.0022 (Low) [A] 
+公司滥用得分(越低越好): 0 (Very Low) [A] 
+安全信息:
+使用类型: business [A] FixedLineISP [3]
+公司类型: isp [A] 
+是否云提供商: No [D] 
+是否数据中心: No [A] Yes [1]
+是否移动设备: No [A] 
+是否代理: No [1 A D] 
+是否VPN: No [1 A D] 
+是否Tor: No [1 3 A D] 
+是否Tor出口: No [1 D] 
+是否网络爬虫: No [A] 
+是否匿名: No [1 D] 
+是否攻击者: No [D] 
+是否滥用者: No [A D] 
+是否威胁: No [D] 
+是否中继: No [D] 
+是否Bogon: No [A D]
+DNS-黑名单: 315(Total_Check) 0(Clean) 0(Blacklisted) 315(Other) 
+Google搜索可行性：NO
+-------------邮件端口检测--基于oneclickvirt/portchecker开源-------------
+Platform  SMTP  SMTPS POP3  POP3S IMAP  IMAPS
+LocalPort ✔     ✔     ✔     ✔     ✔     ✔    
+QQ        ✔     ✔     ✔     ✘     ✔     ✘    
+163       ✔     ✔     ✔     ✘     ✔     ✘    
+Sohu      ✔     ✔     ✔     ✘     ✔     ✘    
+Yandex    ✔     ✔     ✔     ✘     ✔     ✘    
+Gmail     ✔     ✔     ✘     ✘     ✘     ✘    
+Outlook   ✔     ✘     ✔     ✘     ✔     ✘    
+Office365 ✔     ✘     ✔     ✘     ✔     ✘    
+Yahoo     ✔     ✔     ✘     ✘     ✘     ✘    
+MailCOM   ✔     ✘     ✔     ✘     ✔     ✘    
+MailRU    ✔     ✔     ✘     ✘     ✔     ✘    
+AOL       ✔     ✔     ✘     ✘     ✘     ✘    
+GMX       ✔     ✘     ✔     ✘     ✔     ✘    
+Sina      ✔     ✔     ✔     ✘     ✔     ✘    
+Apple     ✘     ✔     ✘     ✘     ✘     ✘    
+FastMail  ✘     ✔     ✘     ✘     ✘     ✘    
+ProtonMail✘     ✘     ✘     ✘     ✘     ✘    
+MXRoute   ✔     ✘     ✔     ✘     ✔     ✘    
+Namecrane ✔     ✔     ✔     ✘     ✔     ✘    
+XYAMail   ✘     ✘     ✘     ✘     ✘     ✘    
+ZohoMail  ✘     ✘     ✘     ✘     ✘     ✘    
+Inbox_eu  ✔     ✘     ✔     ✘     ✘     ✘    
+Free_fr   ✘     ✔     ✔     ✘     ✔     ✘    
+----------------三网回程--基于oneclickvirt/backtrace开源----------------
+北京电信v4 219.141.140.10  检测不到回程路由节点的IPV4地址
+北京联通v4 202.106.195.68  检测不到回程路由节点的IPV4地址
+北京移动v4 221.179.155.161 检测不到回程路由节点的IPV4地址
+上海电信v4 202.96.209.133  检测不到回程路由节点的IPV4地址
+上海联通v4 210.22.97.1     检测不到回程路由节点的IPV4地址
+上海移动v4 211.136.112.200 检测不到回程路由节点的IPV4地址
+广州电信v4 58.60.188.222   检测不到回程路由节点的IPV4地址
+广州联通v4 210.21.196.6    检测不到回程路由节点的IPV4地址
+广州移动v4 120.196.165.24  检测不到回程路由节点的IPV4地址
+成都电信v4 61.139.2.69     检测不到回程路由节点的IPV4地址
+成都联通v4 119.6.6.6       检测不到回程路由节点的IPV4地址
+成都移动v4 211.137.96.205  检测不到回程路由节点的IPV4地址
+北京电信v6 2400:89c0:1053:3::69     电信163    [普通线路] 
+北京联通v6 2400:89c0:1013:3::54     联通4837   [普通线路] 
+北京移动v6 2409:8c00:8421:1303::55  移动CMIN2  [精品线路] 移动CMI    [普通线路] 
+上海电信v6 240e:e1:aa00:4000::24    电信163    [普通线路] 
+上海联通v6 2408:80f1:21:5003::a     联通4837   [普通线路] 
+上海移动v6 2409:8c1e:75b0:3003::26  移动CMIN2  [精品线路] 移动CMI    [普通线路] 
+广州电信v6 240e:97c:2f:3000::44     电信163    [普通线路] 
+广州联通v6 2408:8756:f50:1001::c    联通4837   [普通线路] 
+广州移动v6 2409:8c54:871:1001::12   移动CMI    [普通线路] 移动CMIN2  [精品线路] 
+准确线路自行查看详细路由，本测试结果仅作参考
+同一目标地址多个线路时，可能检测已越过汇聚层，除了第一个线路外，后续信息可能无效
+---------------------回程路由--感谢fscarmen开源及PR---------------------
+依次测试电信/联通/移动经过的地区及线路，核心程序来自nexttrace，请知悉!
+广州电信 58.60.188.222
+ 	
+广州联通 210.21.196.6
+ 	
+广州移动 120.196.165.24
+ 	
+--------------------自动更新测速节点列表--本脚本原创--------------------
+位置		 上传速度	 下载速度	 延迟
+Speedtest.net	 1018.35Mbps	 482.96Mbps	 1.352.004.00ms	
+日本东京	 981.56Mbps	 542.56Mbps	 1.872.003.00ms	
+中国香港	 123.63Mbps	 203.23Mbps	 53.6757.0056.00ms	
+联通上海5G	 16.43Mbps	 68.89Mbps	 153.84160.00150.00ms	
+移动Chengdu	 0.56Mbps	 60.19Mbps	 115.7483.0086.00ms	
+移动Suzhou	 0.19Mbps	 0.04Mbps	 254.49323.00135.00ms	
+------------------------------------------------------------------------
+ 总共花费      : 13 分 27 秒
+ 时间          : Sat May 31 15:18:55 CST 2025
+------------------------------------------------------------------------
+
 
 # 🌐网络质量
 ![三网回程](https://report.check.place/net/38GHYECVN.svg)
