Update VPS value in tag-data.json and modify image link in Akile-HKLite.mdx for improved accuracy

--- a/data/blog/vps/Akile-HKLite.mdx
+++ b/data/blog/vps/Akile-HKLite.mdx
@@ -1,6 +1,7 @@
 ---
 title: '[NodeQuality] Akile HKLite BlackFriday 2024'
 date: 2025-05-30
+update: 2025-06-01
 tags: [vps, DNS解锁]
 summary: 本文介绍Akile HKLite BlackFriday 2024的性能测试结果
 ---
@@ -51,7 +52,7 @@ Full Test       | https://browser.geekbench.com/v5/cpu/23496768
 
 # 🎬IP质量
 
-![image](https://i.111666.best/image/wCdFdycEf0f5CsBEwClREH.webp)
+![image](https://report.check.place/ip/2DQSC73EC.svg)
 
 # 🌐网络质量
 
