--- a/data/blog/vps/Akile-HKLite.mdx
+++ b/data/blog/vps/Akile-HKLite.mdx
@@ -1,7 +1,7 @@
 ---
 title: '[NodeQuality] Akile HKLite BlackFriday 2024'
 date: 2025-05-30
-update: 2025-06-01
+lastmod: 2025-06-01
 tags: [vps, DNS解锁]
 summary: 本文介绍Akile HKLite BlackFriday 2024的性能测试结果
 ---
