Update VPS value in tag-data.json and change description to summary in Wap-JP-Pro.mdx for clarity

--- a/data/blog/vps/Wap-JP-Pro.mdx
+++ b/data/blog/vps/Wap-JP-Pro.mdx
@@ -2,7 +2,7 @@
 title: "[NodeQuality]Wap-Japan-Pro"
 date: 2025-06-01
 tags: [vps]
-description: "wap japan pro 老段测试"
+summary: "wap japan pro 老段测试"
 ---
 
 > wap japan pro 老段测试
