Update tag-data.json to reflect new tag values and add additional tags, and enhance Wap-JP-Pro.mdx with a new network test image for improved content richness.

--- a/data/blog/vps/Wap-JP-Pro.mdx
+++ b/data/blog/vps/Wap-JP-Pro.mdx
@@ -7,6 +7,11 @@ summary: "wap japan pro 老段测试"
 
 > wap japan pro 老段测试
 
+# 2025-06-06 晚高峰网络测试
+![image](https://i.111666.best/image/wKc4r5ytv89OnArUnaXSkQ.png)
+
+
+
 # 💻基本信息
 ```
 Basic System Information:
